            - check_printer_health update to 1.2.0.1
            - check_ups_health update to 4.3
            - check_vsphere update to 0.3.11
            - check_wut_health update to 4.1.0.2
          - gearman:
            - mod-gearman update to 5.1.4
          - grafana:
            - pnp-datasource update to 2.1.0
            - thruk-datasource update to 2.1.1
          - snmptrapd:
            - improve the trap_logger
          - monitoring-plugins update to 2.4.0
          - omdnotificationforwarder update to 2.6.1.2

5.40     Jul 12 2024
          - omd:
            - remove /etc/init.d/omd, all systems use systemd now
          - thruk:
            - update to 3.16
            - lmd update to 2.2.1
          - naemon:
            - update to 1.4.2
            - livestatus update to 1.4.2
          - plugins:
            - check_dell_health update to 1.1.0.1
            - check_hpasm update to 4.9.0.1
            - check_mssql_health update to 2.7.7
            - check_nsc_web update to 0.7.2
            - check_ntp_health update to 1.5.0.1
            - check_nwc_health update to 11.4.0.2
            - check_printer_health update to 1.2
            - check_rittal_health update to 4.0
            - check_ups_health update to 4.2.1
            - check_vsphere update to 0.3.10
            - check_wut_health update to 3.2.1
          - gearman:
            - mod-gearman-worker-go update to 1.5.1
          - grafana:
            - update to 10.4.2
            - thruk-datasource update to 2.0.8
          - prometheus:
            - update to 2.53.1
          - coshsh update to 10.2.1.3
          - omdeventhandler update to 1.1.0.1
          - omdnotificationforwarder update to 2.6.1.1
          - pnp4nagios update to f4a831e
          - promxy update to 0.0.86
          - victoriametrics update to 1.101.0

5.30     Jan 29 2024
          - Thruk: update to 3.12
          - LMD: Update 2.1.9
          - Monitoring-Plugins: update to 2.3.5
          - Gearman: